--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,10 @@
-
-<h1>All Users</h1>
-<ul>
-  <li>User 1</li>
-  <li>User 2</li>
-</ul>
+<h1 class="mb-4">All Users</h1>
+<section class="container my-3 mx-auto p-3 p-md-5 border rounded border-success">
+  <% @users.each do |user| %>
+    <div class="row mb-4">
+      <div class="col-12">
+        <%= render partial: "shared/user_partial", locals: { user: user || "No user found" } %>
+      </div>
+    </div>
+  <% end %>
+</section>
