--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,4 +17,7 @@
   <%= link_to user_posts_path(@users), class: "btn btn-success mt-3 align-self-center" do %>
     See all Posts
   <% end %>
+  <%= link_to new_user_post_path(@users), class: "btn btn-success mt-3 align-self-center" do %>
+    Add New Post
+  <% end %>
 </section> 
