--- a/app/views/shared/_user_partial.html.erb
+++ b/app/views/shared/_user_partial.html.erb
@@ -1,6 +1,6 @@
 <div class="container d-flex justify-content-center align-items-center bg-light border rounded py-4 user_card">
   <div class="col-lg-3 col-md-6 user_img">
-    <i class="fa-solid fa-user fa-2xl"></i>
+    <img src=<%= user.photo %> class="user-img-content">
   </div>
   <div class="col-lg-4 col-md-6 user_highlight">
     <h3 class="d-flex justify-content-start align-items-center">Name: <%= link_to  user.name, user_path(user) %></h3>
