fix the linter error and change the name of partials

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <h1 class="mb-4">User Profile</h1>
 
 <section class="container">
-  <%= render partial: "shared/user_partial", locals: { user: @user } %>
+  <%= render partial: "shared/user_summary", locals: { user: @user } %>
   <div class="container d-flex flex-column p-3 justify-content-center align-items-center bio-container bg-info border rounded py-4">
     <h3 class="col-lg-6 col-md-12 mb-3">Bio:</h3>
     <p class="col-lg-6 col-md-12 text-center"><%= @user.bio %></p>
@@ -9,7 +9,7 @@
   <div class="recent-post user-posts">
     <% @user.recent_posts.each do |post| %>
       <%= link_to user_post_path(post.author.id, post.id) do %>
-        <%= render partial: 'shared/post_partial', locals: { post: post } %>
+        <%= render partial: 'shared/post_summary', locals: { post: post } %>
       <% end %>
     <% end %>
   </div>
