--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,13 +1,13 @@
 <h1>Posts for a User</h1>
 <section>
-<%= render partial: "shared/user_partial", locals: { user: @user || "No user found" } %>
+<%= render partial: "shared/user_summary", locals: { user: @user || "No user found" } %>
 <% @post.each do |post| %>
   <div class="container bg-light border rounded mt-3">
   <span >
-    <%= render partial: 'shared/post_partial', locals: { post: post } %>
+    <%= render partial: 'shared/post_summary', locals: { post: post } %>
   </span>
     <% post.recent_comments.each do |comment| %>
-      <%= render partial: 'shared/recent_comment_partial', locals: { comment: comment } %>
+      <%= render partial: 'shared/recent_comments', locals: { comment: comment } %>
     <% end %>
   </div>
 <% end %>
