--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
   <% @users.each do |user| %>
     <div class="row mb-4">
       <div class="col-12">
-        <%= render partial: "shared/user_partial", locals: { user: user || "No user found" } %>
+        <%= render partial: "shared/user_summary", locals: { user: user || "No user found" } %>
       </div>
     </div>
   <% end %>
