fix the sign-up page issue

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag 'sign', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag 'sign-in', media: 'all', 'data-turbolinks-track': 'reload' %>
 
 <h2>Sign up</h2>
 <section class="form-container">
