--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,16 +10,6 @@
     <%= f.text_field :name, autofocus:true , autocomplete: "name"%>
   </div>
 
-  <div class ="field">
-    <%= f.label :bio %><br>
-    <%= f.text_field :bio, autofocus:true , autocomplete: "name"%>
-  </div>
-
-  <div class ="field">
-    <%= f.label :photo %><br>
-    <%= f.text_field :photo, autofocus:true , autocomplete: "name", pattern: "https?://.+",placeholder: "Enter the URL" %>
-  </div>
-
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
@@ -38,10 +28,8 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
-  <div class ="field">
-    <%= f.label :posts_counter %><br />
-    <%= f.number_field :posts_counter, value: 0 , readonly: true %>
-  </div>
+  <!-- Hidden Field for posts_counter -->
+  <%= f.hidden_field :posts_counter, value: 0 %>
 
   <div class="actions">
     <%= f.submit "Sign up" %>
