--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 
   </head>
   <body>
-
+  <%= render 'layouts/navbar' %>
   <div class='container'>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
