--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Posts for a User</h1>
 <section>
 <%= render partial: "shared/user_summary", locals: { user: @user || "No user found" } %>
-<% @post.each do |post| %>
+<% @user.posts.each do |post| %>
   <div class="container bg-light border rounded mt-3">
   <span >
     <%= render partial: 'shared/post_summary', locals: { post: post } %>
