--- a/app/views/shared/_recent_comments.html.erb
+++ b/app/views/shared/_recent_comments.html.erb
@@ -1,4 +1,7 @@
 <div class="container d-flex justify-content-center align-items-center pt-3">
   <p class="col-lg-2 col-md-6 comment_author"><%= comment.author.name %>: </p>
   <p class="col-lg-4 col-md-6 comment_text"><%= comment.text %></p>
+  <% if can? :destroy, comment %>
+  <%= button_to 'Delete', user_post_comment_path(comment.author, comment.post, comment), method: :delete, data: { confirm: 'Are you sure you want to delete this comment?' } %>
+<% end %>
 </div>
