--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
   <div class="recent-post user-posts">
     <% @user.recent_posts.each do |post| %>
       <%= link_to user_post_path(post.author.id, post.id) do %>
-        <%= render partial: 'shared/post_summary', locals: { post: post } %>
+        <%= render partial: 'shared/post_summary', locals: { post: post, recent_comments: post.recent_comments } %>
       <% end %>
     <% end %>
   </div>
